refactor : List.of 활용